# TextureCompressor

./: CMakeLists.txt  README.md
Compressor/: CMakeLists.txt  README.md  TextureCompressor.pro
Compressor/src/: main.cpp
DXTViewer/: CMakeLists.txt  DXTViewer  DXTViewer.pro  README.md
DXTViewer/include/: DXTTexture.h  NGLScene.h  ScreenQuad.h
DXTViewer/shaders/: PhongFragment.glsl  TextureFragment.glsl
DXTViewer/src/: DXTTexture.cpp  NGLScene.cpp  ScreenQuad.cpp  main.cpp
PackTool/: CMakeLists.txt  PackTool.pro  README.md  TextureCompressor
PackTool/src/: main.cpp
PackViewer/: CMakeLists.txt  PackViewer  PackViewer.pro  README.md
PackViewer/include/: DXTTexture.h  NGLScene.h  TexturePack.h
PackViewer/shaders/: TextureVertex.glsl
PackViewer/src/: NGLScene.cpp  TexturePack.cpp
texture/: lion.cmp
